--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
             <a href="{% url 'documents:document_list' %}">
                 <i class="fas fa-file-invoice"></i> Documents
             </a>
-            <a href="{% url 'dashboard:calendar' %}">
+            <a href="{% url 'dashboard:schedule' %}">
                 <i class="fas fa-calendar"></i> Calendar
             </a>
         </div>
