--- a/templates/documents/document_list.html
+++ b/templates/documents/document_list.html
@@ -33,8 +33,8 @@
             <button class="btn btn-secondary">
                 <i class="fas fa-download"></i> Export
             </button>
-            <a href="#" class="btn btn-primary">
-                <i class="fas fa-plus"></i> New Document
+            <a href="{% url 'documents:quote_create' %}" class="btn btn-primary">
+                <i class="fas fa-plus"></i> Create Quote
             </a>
         </div>
     </div>
@@ -105,23 +105,28 @@
                                 <a href="{% url 'documents:document_detail' document.pk %}" class="btn btn-icon" title="View">
                                     <i class="fas fa-eye"></i>
                                 </a>
-                                <a href="{% url 'documents:document_edit' document.pk %}" class="btn btn-icon" title="Edit">
-                                    <i class="fas fa-edit"></i>
-                                </a>
+                                {% if document.quote %}
+                                    <a href="{% url 'documents:generate_quote_pdf' document.quote.pk %}" 
+                                       class="btn btn-icon generate-pdf" 
+                                       title="View as PDF"
+                                       data-quote-id="{{ document.quote.pk }}">
+                                        <i class="fas fa-file-pdf"></i>
+                                    </a>
+                                    <button class="btn btn-icon generate-invoice" 
+                                            title="Generate Invoice"
+                                            data-quote-id="{{ document.quote.pk }}">
+                                        <i class="fas fa-file-invoice-dollar"></i>
+                                    </button>
+                                {% endif %}
+                                {% if document.file %}
+                                    <a href="{{ document.file.url }}" class="btn btn-icon" title="Download" target="_blank">
+                                        <i class="fas fa-download"></i>
+                                    </a>
+                                {% endif %}
                                 <button class="btn btn-icon dropdown-toggle" title="More">
                                     <i class="fas fa-ellipsis-v"></i>
                                 </button>
                                 <div class="dropdown-menu">
-                                    <a href="{% url 'documents:document_duplicate' document.pk %}" class="dropdown-item">
-                                        <i class="fas fa-copy"></i> Duplicate
-                                    </a>
-                                    <a href="{% url 'documents:document_download' document.pk %}" class="dropdown-item">
-                                        <i class="fas fa-download"></i> Download PDF
-                                    </a>
-                                    <a href="{% url 'documents:document_email' document.pk %}" class="dropdown-item">
-                                        <i class="fas fa-envelope"></i> Send Email
-                                    </a>
-                                    <div class="dropdown-divider"></div>
                                     <a href="#" class="dropdown-item text-danger" data-toggle="modal" data-target="#deleteModal{{ document.pk }}">
                                         <i class="fas fa-trash"></i> Delete
                                     </a>
@@ -159,8 +164,8 @@
                     <i class="fas fa-file-alt"></i>
                     <h2>No Documents Found</h2>
                     <p>Get started by creating your first document</p>
-                    <a href="#" class="btn btn-primary">
-                        <i class="fas fa-plus"></i> Create Document
+                    <a href="{% url 'documents:quote_create' %}" class="btn btn-primary">
+                        <i class="fas fa-plus"></i> Create Quote
                     </a>
                 </div>
             </div>
@@ -168,7 +173,7 @@
     </div>
 </div>
 
-<!-- Delete Confirmation Modals -->
+<!-- Delete Confirmation Modal -->
 {% for document in documents %}
 <div class="modal fade" id="deleteModal{{ document.pk }}" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
@@ -180,14 +185,11 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Are you sure you want to delete "{{ document.title }}"? This action cannot be undone.</p>
+                <p>Are you sure you want to delete this document?</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <form action="{% url 'documents:document_delete' document.pk %}" method="POST" style="display: inline;">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                </form>
+                <button type="button" class="btn btn-danger">Delete</button>
             </div>
         </div>
     </div>
